fixed scrollspy spacing for mobile

--- a/public/jake-lewis-website1.css
+++ b/public/jake-lewis-website1.css
@@ -779,6 +779,18 @@ nav ul li {
   z-index: 2;
   /* Specify a stack order in case you're using a different order for other elements */
 }
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); /* Black fallback color */
+  background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.5s; /*  0.5 second transition effect to slide in or slide down */
+}
 
 #aboutMe blockquote {
   border-left: 10px solid #009788;
